# earthcatalog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  TODO.md  assessment.md  environment.yml  pyproject.toml  zensical.toml
.github/workflows/: consolidate.yml  daily_delta.yml  docs.yml  incremental.yml  ingest.yml  publish.yml  tests.yml
docs/: DESIGN.md  DESIGN_v2.md  DESIGN_v3.md  plan_smoke_test_and_dask.md  progress.md  progress_20260422.md  progress_20260423.md
docs/site/: architecture.md  configuration.md  index.md  quickstart.md
docs/site/api/: core.md  grids.md  index.md  maintenance.md  pipelines.md
docs/site/maintenance/: compact.md
docs/site/operations/: ingest_guide.md  ingest_workflow.md  query_catalog.md  query_catalog_julia.md
docs/site/pipelines/: backfill.md  incremental.md
earthcatalog/: __init__.py  cli.py  config.py
earthcatalog/core/: __init__.py  catalog.py  catalog_info.py  earthcatalog.py  fix_schema.py  hash_index.py  lock.py  partitioner.py  schema.py  store_config.py  transform.py
earthcatalog/grids/: __init__.py  geojson_partitioner.py  h3_partitioner.py
earthcatalog/maintenance/: compact.py
earthcatalog/pipelines/: backfill.py  backfill_v2.py  incremental.py
earthcatalog/stac_items/metadata/: 00000-009b39a5-b107-4d83-b868-dff9d5e332a3.metadata.json
earthcatalog/tools/: make_test_inventory.py
scripts/: audit_inventory.py  catalog_stats.py  compact_stragglers.py  compare_catalogs.py  consolidate.py  daily_delta.py  diff_manifests.py  dump_inventory_ids.py  final_compact.py  info.py  inject_build_metadata.py  repair_catalog.py  run_backfill.py  run_backfill_v2.py  update_hash_index.py
scripts/archive/: audit_inventory.py  diff_manifests.py  extract_manifest_ids.py  migrate_schema.py  repair_catalog.py
tests/: test_backfill.py  test_backfill_v2.py  test_catalog_info.py  test_catalog_lifecycle.py  test_compact.py  test_consolidate.py  test_daily_delta.py  test_duckdb_query.py  test_earthcatalog.py  test_fix_schema.py  test_h3_partitioner.py  test_hash_index.py  test_inventory.py  test_lock.py  test_path_resolution.py  test_pipeline_e2e.py  test_roundtrip.py  test_spatial_query.py  test_transform.py
tests/fixtures/: stac_items.py
