[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthcatalog"
version = "0.5.1"
description = "Spatially-partitioned STAC ingest pipeline backed by Apache Iceberg"
requires-python = ">=3.12"
dependencies = [
  "pyarrow",
  "pyiceberg[pyiceberg-core,sql-sqlite]",
  "obstore",
  "rustac",
  "h3",
  "shapely",
  "numpy",
  "pyyaml",
  "typer",
  "duckdb",
  "dask[distributed]",
  "coiled",
  "orjson",
  "xxhash",
]

[project.urls]
Homepage = "https://github.com/nasa-itslive/earthcatalog"
Repository = "https://github.com/nasa-itslive/earthcatalog"
Documentation = "https://nasa-itslive.github.io/earthcatalog/"
"Bug Tracker" = "https://github.com/nasa-itslive/earthcatalog/issues"
Changelog = "https://github.com/nasa-itslive/earthcatalog/blob/main/CHANGELOG.md"

[project.scripts]
earthcatalog-ingest = "earthcatalog.pipelines.incremental:main"
earthcatalog = "earthcatalog.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["earthcatalog*"]

[dependency-groups]
dev = ["pytest", "ruff", "mypy", "pre-commit", "zensical", "mkdocstrings[python]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end tests that require real S3 read access (public ITS_LIVE bucket)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP"]
ignore = ["E501"]                   # line length enforced by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
